# mqtt-ipc

./: .gitignore  Makefile.am  README.md  configure.ac
examples/: Makefile.am
python/: app1.py  app2.py  app3.py
python2/: app1.py  app2.py  app3.py  mqtt_ipc.py
src/: Makefile.am  mipc.c  mipc.h
